--- a/styles.CSS
+++ b/styles.CSS
@@ -77,3 +77,32 @@ div{
     background-color: #0B192C;
 }
 
+.DEFTONESS{
+
+    display: flex;
+
+}
+
+.CFMM{
+    display: flex;
+}
+
+
+.PROJECTSS{
+
+    display: flex;
+}
+
+
+
+.PROJECTSS img {
+
+border-radius: 30px;
+
+}
+
+.IMAGES{
+
+    border-radius: 23px;
+}
+
