--- a/styles.CSS
+++ b/styles.CSS
@@ -1,96 +1,98 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&display=swap');
 
 
 body {
     background-image: url("backgrounddd.jpeg");
     background-size: cover;
+    background-attachment: fixed;
     font-family: 'Libre Bodoni';
     color: #ffd0d0;
-    font-size: x-large;
+    font-size: small;
 
 
 
 }
- 
-.navBar{
-    background-color:#c063e7;
+
+.navBar {
+    background-color: #c063e7;
     padding: 20px;
     text-align: center;
-    
+
 }
+
 .navBar a {
     padding: 10px;
 }
+
 .navBar a:hover {
     background-color: #0B192C;
 
 }
 
-a{
+a {
 
     color: aliceblue;
-    font-size:x-large;
+    font-size: x-large;
 
 }
 
-.textblack{
+.textblack {
 
     color: #ffd0d0;
 }
 
 
-div{
+div {
 
     text-align: center;
 }
 
 #contactme1 {
 
-    font-size:xx-large ;
+    font-size: xx-large;
 
 }
 
-.center{
+.center {
 
     text-align: center;
 }
 
-.box{
+.box {
     background-color: rgb(116, 18, 146);
     padding: 10px;
 }
 
-.box2{
+.box2 {
 
     background-color: rgba(81, 5, 119, 0.428);
     padding: 10px;
-    
+
 }
 
-.box{
+.box {
 
     background-color: #6f1695;
 }
 
-.box3{
+.box3 {
 
     background-color: #0B192C;
 }
 
-.DEFTONESS{
+.DEFTONESS {
 
-    display: flex; 
+    display: flex;
     justify-content: center;
 
 }
 
-.CFMM{
+.CFMM {
     display: flex;
 }
 
 
-.PROJECTSS{
+.PROJECTSS {
 
     display: flex;
 }
@@ -99,16 +101,36 @@ div{
 
 .PROJECTSS img {
 
-border-radius: 30px;
+    border-radius: 30px;
 
 }
 
-.IMAGES{
+.IMAGES {
 
     border-radius: 23px;
 }
 
-.bold{
+.bold {
     font-weight: 800;
     color: aliceblue;
+}
+
+@media screen and (max-width: 600px) {
+    .PROJECTSS {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .DEFTONESS {
+        overflow: scroll;
+        justify-content: start;
+    }
+}
+.centerbox {
+    overflow: scroll;
+    justify-content: start;
+}
+
+@media screen and (max-width{
+    
 }
