--- a/styles.CSS
+++ b/styles.CSS
@@ -7,7 +7,7 @@ body {
     background-attachment: fixed;
     font-family: 'Libre Bodoni';
     color: #ffd0d0;
-    font-size: small;
+    font-size:large;
 
 
 
